# py-mcp

./: .coveragerc  .gitignore  README.md  codecov.yml  conformance-baseline.yml  guide.md  mkdocs.yml  pyproject.toml  pytest.ini  tox.ini
.github/workflows/: conformance.yml  docs.yml  publish.yml  python-ci.yml
docs/: deployment.md  getting-started.md  index.md  middleware.md  runtime-surface.md  security.md  tasks.md
docs/stylesheets/: extra.css
example/: config.py  run_server.py
example/web-based/: run_mcp_with_api_call.py
pymcp/: __init__.py  applications.py  capabilities.py  dispatcher.py  middleware.py  registry.py  server.py  settings.py  utils.py
pymcp/capabilities/: __init__.py  registry.py
pymcp/observability/: __init__.py  logging.py
pymcp/protocol/: __init__.py  errors.py  json_types.py  jsonrpc.py  logging_levels.py  meta.py  payload.py  tool_execution.py  types.py  validate.py  validation_errors.py
pymcp/registries/: __init__.py  registry.py
pymcp/runtime/: __init__.py  context.py  dispatch.py  helpers.py  limits.py  payloads.py  server.py  types.py
pymcp/security/: __init__.py  authn.py  authz.py  configured.py  oauth.py
pymcp/session/: __init__.py  elicitation.py  events.py  lifecycle.py  notifications.py  queueing.py  roots.py  sampling.py  store.py  types.py
pymcp/tasks/: __init__.py  cancellation.py  engine.py  progress.py
pymcp/transport/: __init__.py  http_common.py  http_server.py  shutdown.py  stdio.py  streamable_http.py
pymcp/util/: __init__.py  async_timeout.py  clock.py  completion.py  ids.py  pagination.py  state_machine.py  uri_template.py
tests/: __init__.py  conformance_server.py  conftest.py  support.py  test_middleware.py  test_server.py
tests/integration/: conftest.py  (+1 more)
(+52 files in other folders)
