[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pymcp-kit"
version = "0.1.0"
description = "A capability-first MCP server toolkit for FastAPI with Streamable HTTP and stdio transport"
authors = [
    { name = "Prince Roshan", email = "princekrroshan01@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "jsonschema",
    "pydantic>=2",
    "typing-extensions>=4.0",
    "uvicorn",
    "requests"
]
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/Agent-Hellboy/py-mcp"
Documentation = "https://agent-hellboy.github.io/py-mcp/"
Repository = "https://github.com/Agent-Hellboy/py-mcp"

[project.optional-dependencies]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocs-minify-plugin>=0.8",
    "pymdown-extensions>=10.14",
]

[tool.setuptools.packages.find]
include = ["pymcp*"]
exclude = ["company*"]

[tool.ruff]
extend-exclude = ["company"]
